--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>WatchCharm</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <load href="partials/header.html" />
+    <load href="partials/hero.html" />
+    <load href="partials/about.html" />
+    <load href="partials/catalog.html" />
+    <load href="partials/advert.html" />
+    <load href="partials/sale.html" />
+    <load href="partials/reviews.html" />
+    <load href="partials/contact.html" />
+    <load href="partials/footer.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
