common, reset update

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <load href="partials/reviews.html" />
     <load href="partials/contact.html" />
     <load href="partials/footer.html" />
-
+    <load href="partials/menu.html" />
     <script type="module" src="./main.js"></script>
   </body>
 </html>
