--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
     <load href="partials/footer.html" />
     <load href="partials/menu.html" />
     <script type="module" src="./main.js"></script>
-    <script src="./script.js"></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
