--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,6 @@
     <load href="partials/contact.html" />
     <load href="partials/footer.html" />
     <load href="partials/menu.html" />
-    <script type="module" src="./main.js"></script>
-    <script type="module" src="./script.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
