--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
     <load href="partials/contact.html" />
     <load href="partials/footer.html" />
     <load href="partials/menu.html" />
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
