--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,6 @@
     <load href="partials/footer.html" />
     <load href="partials/menu.html" />
     <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/reviews-slider.js"></script>
   </body>
 </html>
