--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WatchCharm</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
+<link rel="stylesheet" href="./css/styles.css" />
+    
   </head>
   <body>
     <load href="partials/header.html" />
@@ -19,5 +24,7 @@
     <load href="partials/footer.html" />
     <load href="partials/menu.html" />
     <script type="module" src="./main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./js/carousel.js" ></script>
   </body>
 </html>
